# mini-TFS

./: CMakeLists.txt  README.md
client/: main.cpp  tfs_client.cpp  tfs_client.h
datanode/: data_node.cpp  data_node.h  main.cpp
docs/: 01_overview.md  02_data_flow.md  03_proto.md  04_storage.md  05_nameserver.md  06_datanode.md  07_client.md  08_build.md  09_rebalance.md
nameserver/: block_manager.cpp  block_manager.h  main.cpp  name_server.cpp  name_server.h  rebalance_manager.cpp  rebalance_manager.h
proto/: datanode.proto  nameserver.proto
storage/: block_delete_test  block_delete_test.cpp  block_init_test  block_init_test.cpp  block_read_test  block_read_test.cpp  block_write_test  block_write_test.cpp  common.h  file_op.cpp  file_op.h  index_handle.cpp  index_handle.h  mmap_file.cpp
storage/index/: 1
